Fix overflow

--- a/index.css
+++ b/index.css
@@ -116,7 +116,7 @@ margin-left: auto;
 }
 
 #pics > div {
-    display: flex; height: 90%; width: 90%; margin-left: auto; margin-right: auto; background-size: contain; overflow: scroll; background-repeat: no-repeat; background-position: center; 
+    display: flex; height: 90%; width: 90%; margin-left: auto; margin-right: auto; background-size: contain; overflow: hidden; background-repeat: no-repeat; background-position: center; 
 }
 
 #img1 {background-image: var(--img1);}
@@ -238,7 +238,7 @@ margin-right: auto;
 width: 30ch;
 height: 7vw;
 min-height: 50px;
-background-size: contain; overflow: scroll; background-repeat: no-repeat; background-position: center; }
+background-size: contain; overflow: hidden; background-repeat: no-repeat; background-position: center; }
 
 
 label[for=formal] {
